--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,91 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+  --primary: #2268d1;
+  --secondary: #9aa6b8;
+  --accent1: #7a6a6a;
+  --white: #fff;
+  --dark: #2c2c2c;
+  --dark-blue: #0b121e;
 }
 
 * {
   box-sizing: border-box;
-  padding: 0;
+}
+html {
   margin: 0;
+  padding: 0;
+  font-weight: 400;
 }
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h1 {
+  font-size: 3rem;
+  font-weight: 900;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.sub_header {
+  font-size: 1.25rem;
+  font-weight: 400;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+/* Button styling */
+.btn {
+  border: none;
+  cursor: pointer;
+}
+.btn-large {
+  font-size: 0.875rem;
+  height: 3rem;
+  width: 11.25rem;
+}
+.rounded {
+  border-radius: 0.5rem;
+}
+.btn-primary {
+  font-weight: 600;
+  background-color: var(--primary);
+  color: var(--white);
+}
+.btn-outline {
+  border: 1px solid var(--secondary);
+  background-color: var(--white);
+  border-radius: 0.5rem;
+  font-weight: 500;
+  font-family: "__Plus_Jakarta_Sans_ab364c",
+    "__Plus_Jakarta_Sans_Fallback_ab364c";
+}
+
+/* Hero styling */
+.hero {
+  min-height: 800px;
+  display: flex;
+  align-items: center;
+}
+.hero__text-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.hero__h1 {
+  margin-bottom: 2rem;
+}
+
+.hero__h2 {
+  font-weight: 400;
+  margin-bottom: 3rem;
+}
+
+.hero__btn-wrapper {
+  display: flex;
+  gap: 2rem;
 }
