--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@
   --white: #fff;
   --dark: #2c2c2c;
   --dark-blue: #0b121e;
+  --btn-transition: 250ms ease-in;
 }
 
 * {
@@ -64,6 +65,7 @@ header {
 .logo {
   display: flex;
   align-items: flex-end;
+  flex: 1;
 }
 .header__logo:hover,
 .header__logo-text:hover {
@@ -83,7 +85,9 @@ header {
 
 .cta {
   display: flex;
+  justify-content: flex-end;
   align-items: center;
+  flex: 1;
   gap: 2rem;
 }
 .cta__signin-wrapper {
@@ -100,6 +104,8 @@ header {
 /* Nav styling */
 .nav {
   display: flex;
+  justify-content: center;
+  flex: 2;
   gap: 2.5rem;
 }
 .nav__a {
@@ -133,6 +139,17 @@ header {
   font-weight: 500;
   font-family: "__Plus_Jakarta_Sans_ab364c",
     "__Plus_Jakarta_Sans_Fallback_ab364c";
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.btn-outline:hover,
+.btn--header:hover {
+  opacity: 0.8;
+  transition: var(--btn-transition);
+}
+.btn-outline--icon {
+  margin-right: 6px;
 }
 .btn--header {
   height: 3rem;
@@ -160,23 +177,28 @@ header {
   width: 70rem;
   max-width: 70rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
   position: relative;
 }
 .hero__img {
-  height: 28rem;
+  height: 22.5rem;
   border-radius: 1.5rem;
-  position: absolute;
-  right: -35rem;
-  width: 60rem;
+
+  width: 46rem;
   object-fit: cover;
 }
 .hero__text-wrapper {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 3.5rem;
+  padding-bottom: 2.75rem;
 }
 .hero__h1 {
   margin-bottom: 2rem;
+  text-align: center;
 }
 
 .hero__h2 {
