--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -245,9 +245,33 @@ header {
   align-items: center;
   justify-content: center;
   box-shadow: 0 8px 16px 0 rgba(21, 65, 132, 0.2);
+  position: relative;
 }
 .circle-icon__icon {
   height: 1.5rem;
   width: 1.5rem;
+  color: var(--dark-blue);
+}
+
+.circle-icon-flag {
+  border-radius: 100vmax;
+  height: 1.5rem;
+  width: 5.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.75rem;
+  font-weight: 600;
+  position: absolute;
+  top: 0;
+  left: 2.5rem;
+}
+.circle-icon-flag--primary {
+  background-color: var(--primary);
+  color: var(--white);
+}
+.circle-icon-flag--outline {
+  background-color: var(--white);
+  border: 1px solid var(--secondary);
   color: var(--dark-blue);
 }
