--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -303,6 +303,63 @@ header {
   right: 4.5rem;
 }
 
+/* Square icon */
+.square-icon {
+  width: 4.75rem;
+  height: 4.75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.square-icon__outer-shadow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+  background-color: var(--white);
+}
+.square-icon__inner-shadow {
+  width: 3.75rem;
+  height: 3.75rem;
+  border-radius: 1rem;
+  background-color: var(--white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 8px 16px 0 rgba(21, 65, 132, 0.2);
+  position: relative;
+}
+.square-icon__icon {
+  height: 1.5rem;
+  width: 1.5rem;
+  color: var(--dark-blue);
+}
+
+.square-icon-flag {
+  border-radius: 100vmax;
+  height: 1.5rem;
+  width: 5.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.75rem;
+  font-weight: 600;
+  position: absolute;
+  top: 0;
+  left: 2.5rem;
+}
+.square-icon-flag--primary {
+  background-color: var(--primary);
+  color: var(--white);
+}
+.square-icon-flag--outline {
+  background-color: var(--white);
+  border: 1px solid var(--secondary);
+  color: var(--dark-blue);
+}
+
 /* Graphics styling */
 .growth-pill {
   box-sizing: border-box;
@@ -340,6 +397,7 @@ header {
 .listeners-graphic {
   height: 90px;
   border-radius: 1rem;
+  background-color: var(--white);
   padding: 1.25rem 0.75rem;
   box-shadow: 0 8px 16px 0 rgba(21, 65, 132, 0.2);
   display: flex;
@@ -376,4 +434,14 @@ header {
 }
 .listeners__slider-inside--blue {
   background-color: var(--primary);
+}
+.listeners-graphic__hero {
+  position: absolute;
+  bottom: 5rem;
+  left: 2rem;
+}
+.growth-pill__hero {
+  position: absolute;
+  right: 8rem;
+  bottom: 12rem;
 }
