--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,9 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p,
+a {
   margin: 0;
   padding: 0;
 }
@@ -529,7 +531,9 @@ header {
 }
 /* Statistics graphic */
 .statistics {
-  width: 24rem;
+  position: absolute;
+  right: 0;
+  width: 25rem;
   border-radius: 1rem;
   height: 18rem;
   box-shadow: 0 8px 16px 0 rgba(21, 65, 132, 0.2);
@@ -620,8 +624,78 @@ header {
 /* Artist Development */
 .artist-development {
   height: 800px;
+  display: flex;
+  max-width: 70rem;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-start;
 }
-
+.artist-development-content-wrapper {
+  display: flex;
+  width: 100%;
+  position: relative;
+}
+.artist-dev-text-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.artist-dev__subheader {
+  color: var(--primary);
+  display: inline;
+  max-width: 15rem;
+  border-radius: 100vmax;
+  text-align: center;
+  font-size: 0.75rem;
+  font-weight: 700;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  background-color: var(--secondary);
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+.artist-dev__header {
+  font-size: 2.5rem;
+  font-weight: 800;
+  margin-bottom: 3rem;
+}
+.artist-dev__text {
+  font-size: 1.25rem;
+  color: var(--accent1);
+  font-weight: 400;
+  max-width: 500px;
+}
+.artist-dev__text--spacing-sm {
+  margin-bottom: 2rem;
+}
+.artist-dev__text--spacing-lg {
+  margin-bottom: 6rem;
+}
+.artist-dev-icons-wrapper {
+  display: flex;
+  gap: 3.75rem;
+}
+.artist-dev-feature-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.artist-dev-feature-icon-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--secondary);
+  height: 4.5rem;
+  width: 4.5rem;
+  border-radius: 1rem;
+}
+.artist-dev__icon {
+  color: var(--primary);
+  font-size: 2rem;
+}
+.artist-dev-feature__text {
+  font-weight: 700;
+  font-size: 0.875rem;
+}
 /* Footer styling */
 .footer {
   height: 600px;
