--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -140,6 +140,7 @@ header {
 .btn-blue-faded {
   background-color: #a0c4fa;
   color: var(--white);
+  font-weight: 600;
 }
 .btn-outline {
   border: 1px solid var(--secondary);
@@ -713,6 +714,10 @@ header {
 /* Pricing style */
 .pricing-wrapper {
   height: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .pricing-text-wrapper {
   display: flex;
@@ -818,14 +823,22 @@ header {
 .pricing-card__feature-text {
   font-size: 0.75rem;
 }
-.pricing-card__btn-primary {
+.pricing-card__btn {
   padding: 0 1.5rem;
   width: fit-content;
   display: flex;
   align-items: center;
 }
+.pricing-card__btn--album {
+  background-color: #475a76;
+  color: var(--white);
+  font-weight: 600;
+}
 .pricing-card__chevron {
   font-size: 1.25rem;
+}
+.pricing-card__mail {
+  margin-right: 4px;
 }
 /* Footer styling */
 .footer {
