First testimonials card complete

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -840,6 +840,74 @@ header {
 .pricing-card__mail {
   margin-right: 4px;
 }
+/* Testimonials styling */
+.testimonials {
+  height: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.testimonials-heading-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.testimonials__header {
+  font-size: 2.5rem;
+  font-weight: 800;
+  margin-bottom: 2.5rem;
+  color: var(--dark-blue);
+}
+.testimonials__subheader {
+  font-size: 1.25rem;
+  font-weight: 400;
+  margin-bottom: 2.5rem;
+  color: var(--accent1);
+  max-width: 300px;
+}
+.testimonials-card {
+  box-shadow: 0 16px 32px 0 rgba(21, 65, 132, 0.2);
+  border-radius: 1rem;
+  width: 16rem;
+  border: 1px solid #e4edfb;
+  padding: 1.5rem;
+}
+
+.testimonials-card-image-wrapper {
+  height: 3.125rem;
+  width: 3.125rem;
+  margin-bottom: 1.5rem;
+}
+.testimonials-card__image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.testimonials-card__text {
+  font-size: 1.25rem;
+  font-weight: 400;
+  color: var(--dark-blue-fade);
+  margin-bottom: 1.5rem;
+}
+.testimonials-card__text--bold {
+  font-weight: 700;
+}
+.testimonials-card-person-line-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.testimonials-card__line {
+  height: 1px;
+  width: 1rem;
+  background-color: rgba(130, 134, 139, 0.48);
+}
+.testimonials-card__person {
+  font-size: 0.675rem;
+  color: rgba(130, 134, 139, 0.48);
+}
 /* Footer styling */
 .footer {
   height: 500px;
