--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -143,7 +143,7 @@ header {
   font-weight: 600;
 }
 .btn-outline {
-  border: 1px solid var(--secondary);
+  border: 1px solid var(--accent1);
   background-color: var(--white);
   border-radius: 0.5rem;
   font-weight: 500;
@@ -933,11 +933,98 @@ header {
   font-size: 0.675rem;
   color: rgba(130, 134, 139, 0.48);
 }
+/* Success stories styling */
+.success {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 4.75rem;
+}
+.success-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--dark-blue);
+  margin-bottom: 4.75rem;
+}
+.success__header {
+  font-size: 2.5rem;
+  font-weight: 800;
+  margin-bottom: 2.5rem;
+}
+.success__header--blog {
+  font-weight: 500;
+}
+.success__subheader {
+  font-size: 0.75rem;
+  font-weight: 600;
+  color: var(--accent1);
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  margin-bottom: 1rem;
+}
+.success__text {
+  font-size: 1.25rem;
+  color: var(--accent1);
+  max-width: 660px;
+  text-align: center;
+}
+.success__text--blog {
+  text-align: left;
+  margin-bottom: 2rem;
+}
+.success__text--bold {
+  font-weight: 700;
+  color: var(--dark-blue);
+}
+
+.success-image-blog-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.success-image-wrapper {
+  width: 720px;
+  height: 32rem;
+  position: relative;
+  right: 2rem;
+  flex-basis: auto;
+  flex-grow: 1;
+}
+.success__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.success-blog-wrapper {
+  width: 40rem;
+  max-height: 29.5rem;
+  padding: 2.5rem;
+  box-shadow: 0 0 4px 0 rgba(21, 65, 132, 0.2);
+  background-color: var(--white);
+  border-radius: 0.25rem;
+  flex-basis: auto;
+  flex-grow: 1;
+  position: relative;
+  right: 4rem;
+  z-index: 3;
+}
+.success-btn-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+.success__link {
+  font-size: 0.875rem;
+  font-weight: 600;
+  color: var(--dark-blue);
+}
 /* Footer styling */
 .footer {
   height: 500px;
   max-height: 600px;
-  background-color: var(--secondary);
+  background-color: var(--white);
   width: 100%;
   padding-top: 3rem;
   text-align: center;
