--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1288,3 +1288,51 @@ header {
     bottom: 0;
   }
 }
+
+/* 760 media queries */
+@media screen and (max-width: 768px) {
+  /* Header */
+  header {
+    justify-content: center;
+    min-height: 80px;
+    align-items: center;
+  }
+  .logo {
+    justify-content: center;
+  }
+  .nav {
+    display: none;
+  }
+
+  /* Hero */
+  .hero__wrapper {
+    flex-direction: column;
+
+    padding: 0 0 2rem;
+  }
+  .hero__text-wrapper {
+    align-items: center;
+    padding: 0 2rem;
+  }
+  .hero__h1 {
+    text-align: center;
+  }
+  .hero__h2 {
+    text-align: center;
+  }
+  .hero-img-wrapper {
+    max-width: 80vw;
+  }
+  .hero__img {
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+  }
+  .hero__btn-wrapper {
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+  }
+  .btn-large {
+    width: 100%;
+  }
+}
