--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,6 +73,11 @@ header {
   min-height: 96px;
   max-width: 70rem;
   width: 70rem;
+  position: relative;
+}
+.hamburger,
+.hamburger-menu {
+  display: none;
 }
 .logo {
   display: flex;
@@ -1296,6 +1301,41 @@ header {
     justify-content: center;
     min-height: 80px;
     align-items: center;
+  }
+  .hamburger {
+    display: block;
+    position: absolute;
+    margin: auto 0;
+    left: 2rem;
+    cursor: pointer;
+  }
+  .hamburger-menu {
+    width: 50vw;
+    background-color: var(--primary);
+    height: 100vh;
+    z-index: 100;
+    left: 0;
+    position: fixed;
+  }
+  .hamburger-menu--visible {
+    display: block;
+  }
+  .hamburger-menu--hidden {
+    display: none;
+  }
+  .hamburger-line-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+  }
+  .hamburger__line {
+    background-color: var(--dark-blue);
+    height: 2px;
+    width: 20px;
+  }
+  .hamburger__line:hover {
+    opacity: 0.7;
+    transition: var(--btn-transition);
   }
   .logo {
     justify-content: center;
