Hamburger menu close icon added

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1311,7 +1311,7 @@ header {
   }
   .hamburger-menu {
     width: 50vw;
-    background-color: var(--primary);
+    background-color: var(--dark-blue);
     height: 100vh;
     z-index: 100;
     left: 0;
@@ -1323,6 +1323,40 @@ header {
   .hamburger-menu--hidden {
     display: none;
   }
+  .hamburger-menu-close-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 2rem;
+    padding-top: 2rem;
+  }
+  .hamburger-menu__close-icon {
+    font-size: 1.5rem;
+    color: var(--white);
+    cursor: pointer;
+  }
+  .hamburger-menu__close-icon:hover {
+    transform: scale(108%);
+    opacity: 0.9;
+    transition: var(--btn-transition);
+  }
+  .hamburger-menu__ul {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-left: 2rem;
+  }
+  .hamburger-menu__li {
+    font-size: 1rem;
+    font-weight: 400;
+  }
+  .hamburger-menu__link {
+    color: var(--white);
+  }
+  .hamburger-menu__link:hover {
+    opacity: 0.9;
+    transition: var(--btn-transition);
+    text-decoration: underline;
+  }
   .hamburger-line-wrapper {
     display: flex;
     flex-direction: column;
@@ -1333,8 +1367,9 @@ header {
     height: 2px;
     width: 20px;
   }
-  .hamburger__line:hover {
+  .hamburger-line-wrapper:hover {
     opacity: 0.7;
+    transform: scale(104%);
     transition: var(--btn-transition);
   }
   .logo {
