--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1384,7 +1384,7 @@ header {
   .hero__wrapper {
     flex-direction: column;
 
-    padding: 0 0 2rem;
+    padding: 2rem 0 2rem;
   }
   .hero__text-wrapper {
     align-items: center;
@@ -1418,5 +1418,60 @@ header {
   .growth-pill__hero {
     left: -1rem;
     bottom: -1rem;
+  }
+
+  /* About */
+  .about-text-wrapper {
+    padding: 7.5rem 2rem 4rem;
+  }
+  .about__h2 {
+    text-align: center;
+  }
+
+  .about__icons-wrapper {
+    gap: 1rem;
+    flex-direction: column;
+  }
+  .about__label-wrapper {
+    gap: 3rem;
+    padding-bottom: 4rem;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  /* About */
+
+  .about-text-wrapper {
+    align-items: start;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .about__h2 {
+    margin-bottom: 2rem;
+    text-align: left;
+  }
+  .about__h3 {
+    margin-bottom: 1rem;
+  }
+  .about__label-h3 {
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+  .about__h4 {
+    text-align: left;
+    margin-bottom: 2rem;
+  }
+  .about-label-wrapper {
+    padding-left: 2rem;
+
+    padding-right: 2rem;
+  }
+  .about__label-wrapper {
+    justify-content: center;
+    width: 100%;
+    column-gap: 1rem;
+    row-gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(3, 4rem);
   }
 }
