--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -565,6 +565,9 @@ header {
   height: 18rem;
   box-shadow: 0 8px 16px 0 rgba(21, 65, 132, 0.2);
 }
+.statistics--screen-sm {
+  display: none;
+}
 .statistics__image {
   position: absolute;
   height: 8rem;
@@ -659,18 +662,19 @@ header {
 .artist-development {
   height: 800px;
   display: flex;
-  max-width: 70rem;
   width: 100%;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 .artist-development-content-wrapper {
   display: flex;
   width: 100%;
   position: relative;
+  max-width: 70rem;
 }
 .artist-dev-text-wrapper {
   display: flex;
+  /* width: 100%; */
   flex-direction: column;
 }
 .artist-dev__subheader {
@@ -1234,6 +1238,9 @@ header {
     max-width: 65rem;
     padding: 0 2rem;
   }
+  .artist-development-content-wrapper {
+    max-width: 60rem;
+  }
 }
 
 /* 1080 media queries */
@@ -1291,6 +1298,34 @@ header {
     right: unset;
     top: unset;
     bottom: 0;
+  }
+
+  /* Artist development */
+  .artist-development-content-wrapper {
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .artist-dev-text-wrapper {
+    justify-content: center;
+    align-items: center;
+  }
+  .artist-dev-icons-wrapper {
+    gap: 2rem;
+  }
+  .artist-dev__header {
+    margin-bottom: 2rem;
+  }
+  .artist-dev__text--spacing-lg {
+    margin-bottom: 3rem;
+  }
+  .statistics {
+    display: none;
+  }
+  .statistics--screen-sm {
+    display: block;
+    position: relative;
+    margin-bottom: 3rem;
   }
 }
 
@@ -1436,6 +1471,23 @@ header {
     gap: 3rem;
     padding-bottom: 4rem;
   }
+
+  /* Artist development */
+  .artist-dev-text-wrapper {
+    align-items: center;
+  }
+  .artist-development {
+    min-height: 1000px;
+  }
+  .artist-dev-icons-wrapper {
+    gap: 1rem;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 3rem;
+  }
+  .statistics--screen-sm {
+    order: 3;
+  }
 }
 
 @media screen and (max-width: 576px) {
@@ -1443,8 +1495,8 @@ header {
 
   .about-text-wrapper {
     align-items: start;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
   .about__h2 {
     margin-bottom: 2rem;
@@ -1462,9 +1514,9 @@ header {
     margin-bottom: 2rem;
   }
   .about-label-wrapper {
-    padding-left: 2rem;
+    padding-left: 1.5rem;
 
-    padding-right: 2rem;
+    padding-right: 1.5rem;
   }
   .about__label-wrapper {
     justify-content: center;
@@ -1473,5 +1525,16 @@ header {
     row-gap: 1rem;
     display: grid;
     grid-template-columns: repeat(3, 4rem);
+  }
+
+  /* Artist development */
+  .artist-dev-text-wrapper {
+    width: 100%;
+  }
+  .artist-dev-text-wrapper {
+    padding: 0 1.5rem;
+  }
+  .statistics--screen-sm {
+    max-width: 25rem;
   }
 }
