--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -748,13 +748,13 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 .pricing__header {
   font-size: 2.5rem;
   font-weight: 800;
   color: var(--dark);
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
 }
 .pricing__subheader {
   font-size: 0.75rem;
@@ -1241,6 +1241,9 @@ header {
   .artist-development-content-wrapper {
     max-width: 60rem;
   }
+  .pricing-card {
+    width: 18rem;
+  }
 }
 
 /* 1080 media queries */
@@ -1325,6 +1328,21 @@ header {
     display: block;
     position: relative;
     margin-bottom: 3rem;
+  }
+
+  /* Pricing */
+  .pricing-wrapper {
+    height: unset;
+    min-height: 1200px;
+    padding: 3rem 0;
+  }
+  .pricing-cards-wrapper {
+    display: grid;
+    grid-template-columns: repeat(1, 22rem);
+  }
+
+  .pricing-card {
+    width: 22rem;
   }
 }
 
@@ -1486,6 +1504,15 @@ header {
   }
   .statistics--screen-sm {
     order: 3;
+  }
+
+  /* Pricing */
+
+  .pricing-cards-wrapper {
+    flex-direction: column;
+  }
+  .pricing-card {
+    width: 22rem;
   }
 }
 
