--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -906,11 +906,13 @@ header {
 .testimonials-carousel {
   display: grid;
   grid-template-columns: repeat(6, 16rem);
-  overflow-x: hidden;
-  overflow-y: scroll;
+  position: relative;
+  padding-left: 2rem;
   gap: 2rem;
   margin-top: 2rem;
-  width: 100%;
+  width: 100vw;
+  overflow-x: scroll;
+  overflow-y: visible;
 }
 .testimonials-card {
   box-shadow: 0 16px 32px 0 rgba(21, 65, 132, 0.2);
@@ -919,11 +921,11 @@ header {
   border: 1px solid #e4edfb;
   padding: 1.5rem;
   background-color: var(--white);
+  height: fit-content;
 }
 
-.testimonials-card--high {
-  position: relative;
-  bottom: 2rem;
+.testimonials-card--low {
+  margin-top: 2rem;
 }
 .testimonials-card-image-wrapper {
   height: 3.125rem;
@@ -1551,7 +1553,7 @@ header {
   .about__label-wrapper {
     justify-content: center;
     width: 100%;
-    column-gap: 1rem;
+    column-gap: 3rem;
     row-gap: 1rem;
     display: grid;
     grid-template-columns: repeat(3, 4rem);
